--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,11 @@
-add_library(myproject.foo)
-add_library(myproject::foo ALIAS myproject.foo)
-
-target_sources(myproject.foo PRIVATE foo.cpp)
-target_sources(
-  myproject.foo
-  PUBLIC FILE_SET
-         HEADERS
-         BASE_DIRS
-         ${CMAKE_CURRENT_SOURCE_DIR}/../include
-         FILES
-         ${CMAKE_CURRENT_SOURCE_DIR}/../include/myproject/foo.h)
-
-target_link_libraries(myproject.foo PRIVATE myproject::myproject_options myproject::myproject_warnings)
+add_executable(main main.cpp)
+target_link_libraries(
+  main
+  PRIVATE benchmark::benchmark
+          AudioFile
+          silvin_fdn
+          fdnbench_options
+          fdnbench_warnings
+          libphonon.dylib)
+target_include_directories(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../external/steamaudio/include)
+target_link_directories(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../external/steamaudio/lib/osx)
